--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,7 @@
         "fasterer": true,
         "debride": true,
         "ruby-lint": true
-      }
+    },
+    //"ruby.codeCompletion": "rcodetools",
+    "solargraph.commandPath": "C:\\Ruby24-x64\\bin\\solargraph.bat",
 }
